2011-09-13  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* stk500v2.c (stk500v2_command): Treat warnings as errors rather than
	success.

2011-08-30  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #34027: avrdude AT90S1200 Problem (part 3 - documentation)
	* avrdude.1: Document the programmer type restrictions for AT90S1200
	devices.
	* doc/avrdude.texi: (Ditto.)

2011-08-30  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #34027: avrdude AT90S1200 Problem (part 2 - stk500v2 and relatives)
	* stk500v2.c (stk500v2_initialize): For the AT90S1200, release
	/RESET for a moment before reinitializing, as this is required by
	its programming protocol.

2011-08-30  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: In AC_CHECK_LIB for libftdi, check for
	ftdi_usb_get_strings() rathern than ftdi_init(), as this is a more
	specific thing to search for in order to make sure getting a
	recent enough libftdi.

2011-08-29  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #34027: avrdude AT90S1200 Problem (part 1 - bitbang
	programmers)
	* config_gram.y: Introduce new keyword "is_at90s1200".
	* lexer.l: (Ditto.)
	* avrdude.conf.in: Applew new keyword to the AT90S1200 device.
	* avrpart.h: Introduce new flag AVRPART_IS_AT90S1200, reflecting
	the is_at90s1200 configuration keyword.
	* bitbang.c (bitbang_initialize): Replace existing test for
	AT90S1200 by AVRPART_IS_AT90S1200
	* avr.c (avr_write_byte_default): Avoid the pre-write reading for
	the AT90S1200, as this appears to sometimes corrupt the high byte
	by pre-programming the low byte just written into it.

2011-08-27  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: Bump version for post-5.11.

2011-08-27  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: Bump version for releasing AVRDUDE 5.11.

2011-08-26  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* avrdude.1: Update the list of supported AVR devices.
	* doc/avrdude.texi: (Ditto).

2011-08-26  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
